# squeezelite

./: .gitignore  .gitmodules  README.md  main.c  output.c  output_pa.c  output_pack.c  slimproto.c  slimproto.h  squeezelite.h  utils.c
android/: .gitignore  README  build.py  build.sh  clean.sh  meson.build  meson_options.txt  settings.gradle
android/app/: CMakeLists.txt  build.gradle  local.properties
android/app/src/androidTest/java/org/lyrion/squeezelite/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/lyrion/squeezelite/: CommandReceiver.java  JsonRpc.java  Library.java  MainActivity.java  PlayerService.java  Prefs.java  ServerDiscovery.java  SettingsActivity.java  Utils.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_mono_icon.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml
android/app/src/main/res/values-fr/: arrays.xml  strings.xml
android/app/src/main/res/values-ru/: arrays.xml  strings.xml
android/app/src/main/res/values-uk/: arrays.xml  strings.xml
android/app/src/main/res/xml/: root_preferences.xml
android/app/src/test/java/org/lyrion/squeezelite/: ExampleUnitTest.java
android/fastlane/metadata/android/en-US/: short_description.txt
android/fastlane/metadata/android/en-US/changelogs/: 101.txt  200.txt  201.txt  300.txt  400.txt  500.txt
android/src/: android.c  init.c  thread.c
android/src/pa/: README  README.md  portaudio.h
android/src/pa/common/: pa_hostapi.h
android/src/pa/hostapi/aaudio/: libaaudio.c  libaaudio.h  pa_aaudio.c
android/src/pa/hostapi/oboe/: pa_oboe.cpp
android/src/pa/hostapi/opensles/: pa_opensles.c
android/src/pa/os/unix/: pa_unix_hostapis.c
android/submodules-replace/oboe/src/common/: OboeDebug.h
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 100.txt  300.txt  501.txt  600.txt  700.txt  701.txt  800.txt  801.txt
fastlane/metadata/android/fr/: full_description.txt  short_description.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt
fastlane/metadata/android/uk/: full_description.txt  short_description.txt
